--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,13 @@
             <version>1.1.14</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.4</version>
+        </dependency>
+
+
 
 
         <dependency>
